--- a/src/sass/components/OrderSubList.scss
+++ b/src/sass/components/OrderSubList.scss
@@ -9,6 +9,9 @@
   width: 96%;
   margin: 0.5em auto;
   padding-bottom: 0.2em;
+  &:not(:first-child) {
+    margin-top: 1.1em;
+  }
   .header {
     font-size: 1.2em;
     background-color: $OrderSubList_header_bg_color;
@@ -28,7 +31,66 @@
       border-bottom: solid 1px $OrderSubList_header_color;
       text-transform: uppercase;
     }
+    &.status-type-header {
+      position: relative;
+      // outline: solid 1px red;
+      .reveal-hide-button-wrapper {
+        // outline: solid 1px blue;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        right: 1.6rem;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        button {
+          cursor: pointer;
+          border: none;
+          background-color: transparent;
+          // outline: solid 1px red;
+          text-align: center;
+          color: $c7;
+          span {
+            // outline: solid 1px blue;
+            text-align: center;
+            border: none;
+            width: 100%;
+            i {
+              font-size: 2.4rem;
+            }
+          }
+          &:focus {
+            outline: none;
+          }
+          &:hover {
+            color: $c5;
+          }
+        }
+      }
+    }
   }
+}
+
+.OrderSubList-transition-enter {
+  transition: all 350ms ease-in-out;
+  max-height: 0;
+  opacity: 0.01;
+}
+
+.OrderSubList-transition-enter-active {
+  max-height: 300px;
+  opacity: 1;
+}
+
+.OrderSubList-transition-leave {
+  transition: all 350ms ease-in-out;
+  opacity: 1;
+  max-height: 300px;
+}
+
+.OrderSubList-transition-leave-active {
+  max-height: 0;
+  opacity: 0.01;
 }
 
 @media screen and (min-width: 1150px) {
