Add bug fixes and minor UI/UX enhancements

--- a/src/sass/components/OrderSubList.scss
+++ b/src/sass/components/OrderSubList.scss
@@ -9,6 +9,9 @@
   width: 96%;
   margin: 0.5em auto;
   padding-bottom: 0.2em;
+  &.hidden {
+    display: none;
+  }
   &:not(:first-child) {
     margin-top: 1.1em;
   }
