--- a/src/css/components/OrderSubList.css
+++ b/src/css/components/OrderSubList.css
@@ -83,6 +83,8 @@
   width: 96%;
   margin: 0.5em auto;
   padding-bottom: 0.2em; }
+  .OrderSubList.hidden {
+    display: none; }
   .OrderSubList:not(:first-child) {
     margin-top: 1.1em; }
   .OrderSubList .header {
