--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -15,10 +15,10 @@ $c8: #1F1F1F;
 $c9: #000000;
 
 /* Other Colors */
-$success_green: #5BDA9B;
-$success_green_highlight: #1DBF6E;
-$error_red: #DF6C6C;
-$error_red_highlight: #DB3030;
+$success_green: #66BB6A;
+$success_green_highlight: #43A047;
+$error_red: #E57373;
+$error_red_highlight: #EF5350;
 $primary_blue: #72C3F1;
 $primary_blue_highlight: #2AAAF3;
 $warning_yellow: #FADA59;
