--- a/src/css/components/SignIn.css
+++ b/src/css/components/SignIn.css
@@ -160,14 +160,14 @@
     margin-left: -5em;
     margin-top: 3em;
     font-size: 18px;
-    background-color: #5BDA9B;
+    background-color: #66BB6A;
     border-color: #F6F6F6; }
     .SignIn form .submit span {
       display: block;
       width: 100%; }
     .SignIn form .submit:hover {
       border-color: #F6F6F6;
-      background-color: #1DBF6E; }
+      background-color: #43A047; }
   .SignIn .forgot {
     display: block;
     width: 12em;
@@ -178,5 +178,12 @@
       color: #2AAAF3; }
     .SignIn .forgot:hover {
       color: #72C3F1; }
+  .SignIn .SignIn-loading-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 100; }
+    .SignIn .SignIn-loading-wrapper .Loading {
+      height: 45%; }
 
 /*# sourceMappingURL=SignIn.css.map */
