--- a/src/sass/components/SignIn.scss
+++ b/src/sass/components/SignIn.scss
@@ -49,6 +49,7 @@
           border-radius: 4px;
           width: 30%;
           min-width: 160px;
+          max-width: 190px;
           height: 100%;
           font-size: 16px;
           padding-left: 0.8em;
