--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -24,6 +24,19 @@ $primary_blue_highlight: #2AAAF3;
 $warning_yellow: #FADA59;
 $warning_yellow_highlight: #F0C412;
 
+/* MD Colors */
+/* Blues */
+$blue0: #E3F2FD;
+$blue1: #BBDEFB;
+$blue2: #90CAF9;
+$blue3: #64B5F6;
+$blue4: #42A5F5;
+$blue5: #2196F3;
+$blue6: #1E88E5;
+$blue7: #1976D2;
+$blue8: #1565C0;
+$blue9: #0D47A1;
+
 /* Container colors */
 $App_bg_color: $c1;
 $Dashboard_bg_color: $c2;
