--- a/src/css/components/Order.css
+++ b/src/css/components/Order.css
@@ -3,6 +3,8 @@
 ***/
 /* Grey scale */
 /* Other Colors */
+/* MD Colors */
+/* Blues */
 /* Container colors */
 /* Element colors */
 /* --------------------- */
