--- a/src/css/components/Loading.css
+++ b/src/css/components/Loading.css
@@ -79,6 +79,7 @@
   font-weight: 200;
   src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
 .Loading {
+  z-index: 100;
   left: 0; }
   .Loading {
     position: fixed;
@@ -104,7 +105,8 @@
       transition: all 0.25s ease-in-out;
       transform: translateX(0); }
   .Loading .inner .content {
-    background-color: #42A5F5; }
+    min-width: 3.8em;
+    background-color: #3D3D3D; }
   .Loading.hidden .inner .content {
     transform: translateX(calc(-100% - 2rem)); }
 
