--- a/src/css/components/Loading.css
+++ b/src/css/components/Loading.css
@@ -2,9 +2,10 @@
   COLOR PALLETTE
 ***/
 /* Grey scale */
-/* Other Colors */
 /* MD Colors */
 /* Blues */
+/* Greens */
+/* Other Colors */
 /* Container colors */
 /* Element colors */
 /* --------------------- */
@@ -80,7 +81,10 @@
   src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
 .Loading {
   z-index: 100;
-  left: 0; }
+  left: 0;
+  height: 60px;
+  display: flex;
+  align-items: center; }
   .Loading {
     position: fixed;
     top: 0;
@@ -106,8 +110,10 @@
       transform: translateX(0); }
   .Loading .inner .content {
     padding: 0 0.8em;
-    background-color: #3D3D3D;
-    margin-left: 0.8em; }
+    min-width: 3.8em;
+    min-height: 2em;
+    background-color: #9A9A9A;
+    margin-left: -0.2em; }
   .Loading.hidden .inner .content {
     transform: translateX(calc(-100% - 2rem)); }
 
@@ -115,8 +121,8 @@
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
-  width: 32px;
-  height: 32px;
+  width: 20px;
+  height: 20px;
   position: relative; }
 
 .sk-fading-circle .sk-circle {
@@ -132,7 +138,7 @@
   margin: 0 auto;
   width: 15%;
   height: 15%;
-  background-color: #FEFEFE;
+  background-color: #000000;
   border-radius: 100%;
   -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
   animation: sk-circleFadeDelay 1.2s infinite ease-in-out both; }
