--- a/src/css/components/OrderPart.css
+++ b/src/css/components/OrderPart.css
@@ -2,9 +2,10 @@
   COLOR PALLETTE
 ***/
 /* Grey scale */
-/* Other Colors */
 /* MD Colors */
 /* Blues */
+/* Greens */
+/* Other Colors */
 /* Container colors */
 /* Element colors */
 /* --------------------- */
@@ -136,10 +137,10 @@
       width: calc(17.75% - 2px); }
       .OrderParts-wrapper .OrderParts-discount .spacer#spacer5 {
         text-align: right;
-        background-color: #66BB6A;
+        background-color: #81C784;
         width: calc(11.5% - 2px); }
     .OrderParts-wrapper .OrderParts-discount .discount {
-      background-color: #66BB6A;
+      background-color: #81C784;
       width: calc(17.5% - 2px); }
   .OrderParts-wrapper .OrderParts-total {
     padding-bottom: 1em;
