--- a/src/css/components/StockOrderForm.css
+++ b/src/css/components/StockOrderForm.css
@@ -2,9 +2,10 @@
   COLOR PALLETTE
 ***/
 /* Grey scale */
-/* Other Colors */
 /* MD Colors */
 /* Blues */
+/* Greens */
+/* Other Colors */
 /* Container colors */
 /* Element colors */
 /* --------------------- */
@@ -135,11 +136,11 @@
       position: absolute;
       bottom: 0.4em;
       right: calc(50% - 10.5em);
-      background-color: #66BB6A;
+      background-color: #81C784;
       border-color: #F6F6F6; }
       .StockOrderForm .content-wrapper .submit:hover {
         border-color: #F6F6F6;
-        background-color: #43A047; }
+        background-color: #66BB6A; }
     .StockOrderForm .content-wrapper .reset {
       position: absolute;
       bottom: 0.4em;
