--- a/src/sass/components/Loading.scss
+++ b/src/sass/components/Loading.scss
@@ -5,12 +5,16 @@
   @include alert();
   z-index: 100;
   left: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
   .inner {
     .content {
       padding: 0 0.8em;
-      // min-width: 3.8em;
-      background-color: $c7;
-      margin-left: 0.8em;
+      min-width: 3.8em;
+      min-height: 2em;
+      background-color: $c4;
+      margin-left: -0.2em;
     }
   }
   &.hidden {
@@ -26,8 +30,8 @@
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
-  width: 32px;
-  height: 32px;
+  width: 20px;
+  height: 20px;
   position: relative;
 }
 
@@ -45,7 +49,7 @@
   margin: 0 auto;
   width: 15%;
   height: 15%;
-  background-color: #FEFEFE;
+  background-color: $c9;
   border-radius: 100%;
   -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
           animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
