--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -160,7 +160,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: calc(26% - (1px*2) - 0.7em); }
+    width: calc(26% - (1px*2) - 0.9em); }
   .button.settings {
     margin-top: 0;
     background-image: url("../../img/settings.png");
@@ -168,7 +168,8 @@
     background-repeat: no-repeat;
     background-position: center;
     width: calc(26% - (1px*2) - 0.7em);
-    margin-right: 1em; }
+    margin-right: 1em;
+    height: 33px; }
   .button.logout {
     font-size: 1em;
     text-align: center; }
