--- a/src/css/components/FilterByBar.css
+++ b/src/css/components/FilterByBar.css
@@ -79,55 +79,35 @@
   font-style: italic;
   font-weight: 200;
   src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
-.Landing {
-  background-color: #F6F6F6;
-  height: 600px;
-  width: 100%;
-  max-width: 1600px;
-  min-width: 600px;
-  margin: auto;
-  position: relative;
-  margin-top: 4.5em; }
-  .Landing {
-    *zoom: 1; }
-  .Landing:before, .Landing:after {
-    content: "";
-    display: table; }
-  .Landing:after {
-    clear: both; }
+.FilterByBar .filtering-options {
+  margin: 0.5em auto 1.2rem;
+  width: 94%;
+  display: flex;
+  align-items: center;
+  max-width: 940px;
+  color: #1F1F1F; }
+  .FilterByBar .filtering-options .filter-by-wrapper {
+    margin-right: 0.6rem;
+    font-size: 1.2rem; }
+  .FilterByBar .filtering-options .item {
+    margin: 0 0.6rem; }
+    .FilterByBar .filtering-options .item button {
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      font-size: 0.9rem;
+      color: #5C5C5C;
+      border-bottom: solid 1px #5C5C5C;
+      font-weight: 300;
+      text-transform: capitalize; }
+      .FilterByBar .filtering-options .item button:hover {
+        color: #72C3F1;
+        border-bottom: solid 1px #72C3F1; }
+      .FilterByBar .filtering-options .item button:focus {
+        outline: none; }
+    .FilterByBar .filtering-options .item.active button {
+      color: #72C3F1;
+      border-bottom: solid 1px #2AAAF3;
+      font-style: italic; }
 
-@media screen and (max-width: 768px) {
-  .Landing {
-    margin-top: 0.75em; } }
-.quote-stock-form-wrapper .show-other-button-wrapper {
-  width: 96%;
-  margin: auto;
-  margin-top: 1em; }
-  .quote-stock-form-wrapper .show-other-button-wrapper button {
-    border: none;
-    cursor: pointer;
-    color: #72C3F1;
-    background-color: transparent;
-    text-decoration: underline;
-    font-size: 15px;
-    font-weight: 600; }
-    .quote-stock-form-wrapper .show-other-button-wrapper button:hover {
-      color: #2AAAF3;
-      border: none; }
-
-@media screen and (min-width: 1150px) {
-  .quote-stock-form-wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    float: left;
-    width: 50%;
-    height: 100%; }
-    .quote-stock-form-wrapper .show-other-button-wrapper {
-      width: 94%; }
-    .quote-stock-form-wrapper .QuoteForm .content-wrapper, .quote-stock-form-wrapper .StockOrderForm .content-wrapper {
-      width: 94%; }
-      .quote-stock-form-wrapper .QuoteForm .content-wrapper .header, .quote-stock-form-wrapper .StockOrderForm .content-wrapper .header {
-        font-size: 1.6em; } }
-
-/*# sourceMappingURL=Landing.css.map */
+/*# sourceMappingURL=FilterByBar.css.map */
