--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -87,6 +87,7 @@ $Dashboard_padding: 0.7em;
 $Dashboard_header_width: 70%;
 $Landing_padding_top: 4.5em;
 $OrderList_max_width: 1000px;
+$Notif_Menu_height: 20rem;
 
 /* Element measurements */
 $button_border_size: 1px;
