--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -130,10 +130,8 @@
   position: absolute; }
 
 .button {
-  width: calc(45% - (1px*2) - 0.7em);
+  width: calc(40.5% - (1px*2) - 0.7em);
   height: 100%;
-  margin-left: 0.2em;
-  margin-right: 0.4em;
   float: left;
   height: 35px; }
   .button {
@@ -154,27 +152,74 @@
   .button:last-child {
     margin-left: 0;
     margin-right: 0.2em; }
-  .button.refresh {
+  .button:focus {
+    outline: none; }
+  .button.dashboard-controls-button {
     margin-top: 0;
-    background-image: url("../../img/refresh.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: calc(26% - (1px*2) - 0.9em); }
+    width: calc(21% - (1px*2) - 0.9em);
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .button.dashboard-controls-button .icon-wrapper {
+      border-bottom: solid 1px transparent;
+      display: block;
+      width: 2.5rem;
+      max-height: 1.6rem;
+      padding: 0.18rem 0;
+      color: #3D3D3D; }
+    .button.dashboard-controls-button:hover .icon-wrapper {
+      border-bottom: solid 1px #1F1F1F;
+      color: #1F1F1F; }
+    .button.dashboard-controls-button i {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.4rem; }
+  .button.notifications .icon-wrapper {
+    position: relative; }
+    .button.notifications .icon-wrapper .new-notifs-count {
+      background-color: #E57373;
+      border-radius: 100%;
+      color: #F6F6F6;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.7rem;
+      font-style: italic;
+      font-weight: 100;
+      padding: 0.15rem;
+      position: absolute;
+      right: -0.275rem;
+      top: -0.4rem;
+      width: 1.25rem;
+      height: 1.25rem; }
   .button.settings {
-    margin-top: 0;
-    background-image: url("../../img/settings.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: calc(26% - (1px*2) - 0.7em);
     margin-right: 1em;
-    height: 33px; }
+    text-decoration: none;
+    color: inherit; }
   .button.logout {
     font-size: 1em;
-    text-align: center; }
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
     .button.logout span {
-      width: 100%;
+      border-bottom: solid 1px transparent;
+      margin-top: 0.425rem;
+      padding-bottom: 0.3rem;
+      color: #3D3D3D;
+      font-style: italic; }
+    .button.logout:hover span {
+      border-bottom: solid 1px #1F1F1F;
+      color: #1F1F1F; }
+    .button.logout span {
+      width: 74%;
       display: block; }
 
 @media screen and (max-width: 768px) {
