--- a/src/css/components/NotifMenu.css
+++ b/src/css/components/NotifMenu.css
@@ -101,4 +101,39 @@
   font-size: 0.8rem;
   font-style: italic; }
 
+.notif {
+  color: inherit;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+  padding: 0 1.5rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  width: calc(100% - 3rem);
+  height: 2.4rem; }
+  .notif:not(:first-child) {
+    border-top: solid 1px #D7D7D7; }
+  .notif:not(:last-child) {
+    padding-bottom: 0.1rem; }
+
+.new-wrapper, .order-id-wrapper, .order-status-wrapper {
+  display: inline-block;
+  font-weight: 300; }
+
+.order-id-wrapper {
+  margin: 0 0.6rem 0 0.8rem; }
+
+.order-status-wrapper {
+  font-style: italic; }
+
+.new-wrapper {
+  background-color: #42A5F5;
+  border-radius: 100%;
+  color: transparent;
+  width: 0.95rem;
+  height: 0.95rem; }
+  .new-wrapper:not(.new) {
+    background-color: #D7D7D7; }
+
 /*# sourceMappingURL=NotifMenu.css.map */
