--- a/src/sass/components/Landing.scss
+++ b/src/sass/components/Landing.scss
@@ -11,6 +11,11 @@
   margin: auto;
   position: relative;
   margin-top: $Landing_padding_top;
+  &.showingOrderDetail {
+    .landing-inner {
+      display: none;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
