--- a/src/css/components/Dashboard.css
+++ b/src/css/components/Dashboard.css
@@ -102,7 +102,7 @@
   .Dashboard .content-wrapper {
     width: 100%;
     height: 100%;
-    max-width: calc(1600px - (2 * 0.7em));
+    max-width: calc(1340px - (2 * 0.7em));
     min-width: calc(600px - (2 * 0.7em));
     margin: 0.7em;
     margin: auto;
@@ -125,12 +125,14 @@
   float: right;
   width: calc(100% - 70% - (0.7em/2));
   max-width: 32em;
+  min-width: 20em;
   margin: auto;
   height: 100%;
   position: absolute; }
 
 .button {
-  width: calc(40.5% - (1px*2) - 0.7em);
+  width: calc(39.5% - (1px*2) - 0.7em);
+  min-width: 50px;
   height: 100%;
   float: left;
   height: 35px; }
@@ -156,7 +158,7 @@
     outline: none; }
   .button.dashboard-controls-button {
     margin-top: 0;
-    width: calc(21% - (1px*2) - 0.9em);
+    width: calc(18% - (1px*2) - 0.9em);
     background-color: transparent;
     border: none;
     border-radius: 0;
@@ -196,10 +198,11 @@
       top: -0.4rem;
       width: 1.25rem;
       height: 1.25rem; }
-  .button.settings {
-    margin-right: 1em;
+  .button.home, .button.settings {
     text-decoration: none;
     color: inherit; }
+  .button.settings {
+    margin-right: 1em; }
   .button.logout {
     font-size: 1em;
     text-align: center;
@@ -223,6 +226,9 @@
       display: block; }
 
 @media screen and (max-width: 768px) {
+  .button {
+    width: calc(30.5% - (1px*2) - 0.7em); }
+
   .Dashboard {
     position: relative;
     height: auto; }
