--- a/src/css/components/Order.css
+++ b/src/css/components/Order.css
@@ -79,6 +79,87 @@
   font-style: italic;
   font-weight: 200;
   src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
+/***
+  COLOR PALLETTE
+***/
+/* Grey scale */
+/* MD Colors */
+/* Blues */
+/* Greens */
+/* Other Colors */
+/* Container colors */
+/* Element colors */
+/* --------------------- */
+/***
+  MEASUREMENTS
+***/
+/* Media query breakpoints */
+/* Container measurements */
+/* Element measurements */
+/* --------------------- */
+/***
+  FONTS
+***/
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 900;
+  src: local("Roboto-Black"), url(../../fonts/Roboto-Black.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Roboto-BlackItalic"), url(../../fonts/Roboto-BlackItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: bold;
+  font-weight: 800;
+  src: local("Roboto-Bold"), url(../../fonts/Roboto-Bold.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 800;
+  src: local("Roboto-BoldItalic"), url(../../fonts/Roboto-BoldItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Roboto-Italic"), url(../../fonts/Roboto-Italic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Roboto-Light"), url(../../fonts/Roboto-Light.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 300;
+  src: local("Roboto-LightItalic"), url(../../fonts/Roboto-LightItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: medium;
+  font-weight: 500;
+  src: local("Roboto-Medium"), url(../../fonts/Roboto-Medium.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 500;
+  src: local("Roboto-MediumItalic"), url(../../fonts/Roboto-MediumItalic.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto-Regular"), url(../../fonts/Roboto-Regular.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: thin;
+  font-weight: 200;
+  src: local("Roboto-Thin"), url(../../fonts/Roboto-Thin.ttf); }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 200;
+  src: local("Roboto-ThinItalic"), url(../../fonts/Roboto-ThinItalic.ttf); }
 .Order {
   border: solid 1px #D7D7D7;
   border-radius: 4px;
@@ -282,6 +363,25 @@
               border-color: #F6F6F6; }
               .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .form-wrapper .cancel:hover {
                 background-color: #EF5350; }
+          .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .ExistingAddressSelect {
+            margin-top: 4em; }
+          .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .existing-address-select {
+            font-weight: 300;
+            font-style: italic; }
+            .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .existing-address-select {
+              font-family: inherit;
+              background-color: #FFFFFF;
+              width: 16em;
+              height: 3em;
+              padding: 0.25rem 0;
+              font-size: 1rem;
+              color: #3D3D3D;
+              border: none; }
+            .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .existing-address-select:focus {
+              outline: none; }
+          .Order .status-message.controls-wrapper.accept-controls .ShippingAddressForm .existing-address-header {
+            font-size: 26px;
+            margin-bottom: 0.75em; }
       .Order .status-message.controls-wrapper.shipping-controls {
         height: 2.875em; }
         .Order .status-message.controls-wrapper.shipping-controls button {
