--- a/src/sass/components/Order.scss
+++ b/src/sass/components/Order.scss
@@ -2,6 +2,7 @@
 @import '../mixins/button';
 @import '../mixins/outline';
 @import '../mixins/micro-clearfix';
+@import '../mixins/select';
 
 .Order {
   // @include outline(red, 2px);
@@ -221,6 +222,18 @@
                 background-color: $error_red_highlight;
               }
             }
+          }
+          .ExistingAddressSelect {
+            margin-top: 4em;
+          }
+          .existing-address-select {
+            @include select(16em, 3em);
+            font-weight: 300;
+            font-style: italic;
+          }
+          .existing-address-header {
+            font-size: 26px;
+            margin-bottom: 0.75em;
           }
         }
       }
