--- a/src/sass/components/Dashboard.scss
+++ b/src/sass/components/Dashboard.scss
@@ -9,7 +9,6 @@
   min-width: calc(#{$App_min_width} - (2 * #{$Dashboard_padding}));
   @include micro-clearfix();
   padding: $Dashboard_padding;
-  position: relative;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   height: 37px;
   position: fixed;
@@ -28,30 +27,53 @@
 }
 
 .Dashboard-header {
-  float: left;
-  width: $Dashboard_header_width;
+  display: flex;
+  align-items: center;
+  font-size: 1.8rem;
+  width: 10rem;
   height: 100%;
-  margin-left: 0.425em;
+  // float: left;
+  // width: $Dashboard_header_width;
+  // height: 100%;
+  margin-left: 0.765rem;
   a {
     text-decoration: none;
     color: black;
     &:hover {
       text-decoration: none;
-      color: black;
+      color: $c7;
     }
   }
 }
 
 .button-container {
   display: inline-block;
-  float: right;
-  width: calc(100% - #{$Dashboard_header_width} - (#{$Dashboard_padding}/2));
-  max-width: 32em;
-  min-width: 20em;
-  margin: auto;
-  height: 100%;
+  width: auto;
+  height: auto;
   position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 0.765rem;
+  // float: right;
+  // width: calc(100% - #{$Dashboard_header_width} - (#{$Dashboard_padding}/2));
+  // max-width: 32em;
+  // min-width: 20em;
+  // margin: auto;
+  // height: 100%;
+  // position: absolute;
   // right: 0;
+}
+
+.button-container-inner {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.icon-buttons-wrapper {
+  display: inline-block;
+  width: auto;
 }
 
 .button {
@@ -63,7 +85,6 @@
   height: 35px;
   &:last-child {
     margin-left: 0;
-    margin-right: 0.2em;
   }
   &:focus {
     outline: none;
@@ -128,10 +149,10 @@
     color: inherit;
   }
   &.settings {
-    margin-right: 1em;
+    // margin-right: 1em;
   }
   &.logout {
-    // outline: solid 1px red;
+    width: 5.85rem;
     font-size: 1em;
     text-align: center;
     background-color: transparent;
@@ -155,47 +176,9 @@
       }
     }
     span {
-      // outline: solid 1px red;
       width: 74%;
       display: block;
     }
   }
 }
 
-@media screen and (max-width: 768px) {
-  .button {
-    width: calc(30.5% - (#{$button_border_size}*2) - 0.7em);
-  }
-
-  .Dashboard {
-    position: relative;
-    height: auto;
-    .content-wrapper {
-      position: static;
-    }
-  }
-  .Dashboard-header {
-    font-size: 150%;
-    font-size: 6.4vw;
-    clear: both;
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-  .button-container {
-    position: relative;
-    float: none;
-    clear: both;
-    display: block;
-    margin: auto;
-    padding-top: 0.8em;
-    width: 100%;
-    height: 2em;
-  }
-}
-
-@media screen and (min-width: 468px) and (max-width: 768px) {
-  .Dashboard-header {
-    font-size: 2em;
-  }
-}
