--- a/src/css/components/ShippingDetail.css
+++ b/src/css/components/ShippingDetail.css
@@ -105,5 +105,7 @@
       .ShippingDetail #ShippingDetailHide:hover {
         background-color: #7B7B7B;
         border-color: #3D3D3D; }
+      .ShippingDetail #ShippingDetailHide:focus {
+        outline: none; }
 
 /*# sourceMappingURL=ShippingDetail.css.map */
